[package]
name = "di"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = { version = "0.3", features= ["Element", "EventTarget", "HtmlElement", "Node", "HtmlBodyElement", "Window", "Document"] }
wasm-bindgen = "0.2"
lazy_static = "1"