[package]
name = "livid-cli"
version = "0.1.0"
edition = "2021"
default-run = "livid"
description = "Builds and bundles your wasm web app"
license = "MIT"
repository = "https://github.com/MoAlyousef/livid-rs"
readme = "README.md"
categories = ["command-line-utilities", "wasm", "web-programming"]
keywords = ["wasm", "bundler", "web", "build-tool"]

[dependencies]
toml = "0.5"
livid-server = { path = "../livid-server" }