[package]
name = "livid-cli"
version = "0.1.7"
edition = "2021"
default-run = "livid"
description = "Builds and bundles your wasm web app"
license = "MIT"
repository = "https://github.com/MoAlyousef/livid-rs"
readme = "README.md"
categories = ["command-line-utilities", "wasm", "web-programming"]
keywords = ["wasm", "bundler", "web", "build-tool"]

[dependencies]
toml = "0.5"
fs_extra = "1.3.0"
livid-server = { version = "0.2", path = "../livid-server" }
