[package]
name = "livid-desktop"
version = "0.1.2"
edition = "2021"
description = "Lightly wraps a native webview which can be used with livid for the frontend"
repository = "https://github.com/MoAlyousef/livid-rs"
documentation = "https://docs.rs/livid-desktop"
keywords = ["bindings", "graphics", "webview"]
categories = ["graphics"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk-webview-sys = "0.2.9"
livid-server = { version = "0.1", path = "../livid-server" }
