[package]
name = "livid-desktop"
version = "0.1.6"
edition = "2021"
description = "Lightly wraps a native webview which can be used with livid for the frontend"
repository = "https://github.com/MoAlyousef/livid-rs"
documentation = "https://docs.rs/livid-desktop"
keywords = ["bindings", "graphics", "webview"]
categories = ["graphics"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk-webview-sys = "0.3.0"
livid-server = { version = "0.2", path = "../livid-server" }
