[package]
name = "livid-server"
version = "0.2.1"
edition = "2021"
description = "A simple server for use with livid-desktop and livid-cli"
repository = "https://github.com/MoAlyousef/livid-rs"
documentation = "https://docs.rs/livid-server"
keywords = ["http", "server", "web"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.11.0"
ascii = "1.0.0"